<resources>
    <string name="app_name">My memory</string>
    <string name="numPairsEasy">Pairs: 0/4</string>
    <string name="numMovesEasy">Easy: 4 x 2</string>
    <string name="numPairsMedium">Pairs: 0/9</string>
    <string name="numMovesMedium">Medium: 6 x 3</string>
    <string name="numPairsHard">Pairs: 0/12</string>
    <string name="numMoveshard">Hard: 6 x 4</string>
    <string name="save">Save</string>
    <string name="game_name">Game name</string>
    <string name="moves_0">Moves: 0</string>
    <string name="pairs_0_4">Pairs: 0/4</string>
    <string name="easy_4_x_2">Easy : 4 x 2</string>
    <string name="medium_6_x_3">Medium : 6 x 3</string>
    <string name="hard_6_x_4">Hard: 6 x 4</string>
    <string name="enter_game_name">Enter game name</string>
    <string name="refresh">Refresh</string>
    <string name="choose_new_size">Choose new size</string>
    <string name="create_custom_game">Create custom game</string>
    <string name="download_custom_game">Download custom game</string>
    <string name="Pairs">Pairs</string>
    <string name="Moves">Moves</string>
    <string name="win_msg">Congratulations! You won.</string>
    <string name="cust_game_play">You are playing a custom game</string>
    <string name="won_already_msg">You already have won the game!</string>
    <string name="invalid_move_msg">Invalid move</string>
    <string name="no_game_found">"Sorry, we couldn't find such game</string>
    <string name="quit_game">Quit your current game?</string>
    <string name="play_random_game">Surprise me!</string>
</resources>