<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mi_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/mi_newsize"
        android:title="@string/choose_new_size"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_custom"
        android:title="@string/create_custom_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/miDownloadGame"
        android:title="@string/download_custom_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/mi_playRandomCustGame"
        android:title="@string/play_random_game"
        app:showAsAction="never" />
</menu>