<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbeasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/easy_4_x_2" />

        <RadioButton
            android:id="@+id/rbmedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_6_x_3" />

        <RadioButton
            android:id="@+id/rbhard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_6_x_4" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>